# news-load

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: cache_config.py  db_conf.py
crud/: favorite.py  history.py  news.py  users.py
models/: favorite.py  history.py  news.py  users.py
routers/: __init__.py  favorite.py  history.py  news.py  users.py
schemas/: favorite.py  history.py  news.py  users.py
utils/: auth.py  exception.py  exception_handlers.py  response.py  security.py
