[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"aiomysql>=0.2.0",
	"bcrypt==4.0.1",
	"cryptography>=46.0.5",
	"fastapi[standard]>=0.124.4",
	"passlib[bcrypt]==1.7.4",
	"sqlalchemy[asyncio]>=2.0.48",
]
